<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Present Demo</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="personal_particular">About You</string>
    <string name="introduction">Intro.</string>
    <string name="analysis_on_personal_diet_list">Diet</string>
    <string name="energy_calculator">Energy Cal.</string>
    <string name="tips_on_physical_activities">Tips on Ex.</string>
    <string name="tips_on_nutrition">Tips on nutrition</string>
    <string name="loading">Loading</string>
    
     <string name="nfc_not_found">NFC is not support by this device</string>
    <string name="nfc_not_enabled">NFC is not enabled yet</string>
    <string name="nfc_enabled">NFC enabled (Scanning)</string>

    <drawable name="loadinggif">@drawable/slide0004_image009</drawable>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="start_screen_slogan">"Keep Fit! Don't Eat??"</string>
    <string name="background_color">#ffffff</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="walk_on_hkccs_stair">"Walk on HKCC's Stair"</string>
    <string name="other_exercise">Other Exercise</string>
    <string name="title_activity_energy_calculator">EnergyCalculatorActivity</string>
    <string name="title_activity_walk_on_hkcc_stair">WalkOnHkccStairActivity</string>
    <string name="my_record">My Record</string>
    <string name="tap_there">Tap There</string>
    <string name="title_activity_my_record">MyRecordActivity</string>
    <string name="date_label">Date</string>
    <string name="date_default">Click to pick a date</string>
    <string name="type_of_exercise">Type of Exercise</string>
    <string name="energ_used">Energy Used</string>
    <string name="title_activity_date_pick_action_bar">DatePickActionBarActivity</string>
    <string name="add_record">Adding Record</string>
    <string name="energy_per_walk_stair">15</string>
    <string name="energy_type_hkcc_stair_walk">Walk on HKCC stair</string>
    <string name="times">Time(s)</string>
    <string name="ok">OK</string>
    <string name="alertDialogTitle">Attention</string>

</resources>
