<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.demonew.MenuMainActivity" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="3" >

        <Button
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:background="@drawable/button_bg_orange_1"
            android:text="@string/personal_particular" />

        <Button
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:background="@drawable/button_bg_orange_1"
            android:text="@string/introduction" />

        <Button
            android:id="@+id/button3"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:background="@drawable/button_bg_orange_1"
            android:text="@string/analysis_on_personal_diet_list" />

        <Button
            android:id="@+id/button4"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:background="@drawable/button_bg_orange_1"
            android:text="@string/energy_calculator" />

        <Button
            android:id="@+id/button5"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="2"
            android:background="@drawable/button_bg_orange_1"
            android:text="@string/tips_on_physical_activities" />

        <Button
            android:id="@+id/button6"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2"
            android:background="@drawable/button_bg_orange_1"
            android:text="@string/tips_on_nutrition" />
    </GridLayout>

</FrameLayout>